--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,65 +13,64 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout>
 
     <div class="pb-12 mt-5">
-      <div class="text-xl py-1">Hey there 👋</div>
-      <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-      <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
-      <div class="py-2">
-        <text class="text-lg">
-          I made this template for everyone who needs to create a personal website easily and quickly. This template includes Project Section, CV Section, Store, Paginated Blog, RSS Feed, SEO Friendly, Responsive Desing and 29 Visual themes. I hope you find it useful!
-          </text
-        >
-      </div>
-      <div class="mt-8">
-        <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-        <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="btn btn-outline ml-5"> Get This template</a>
-      </div>
-    </div>
+          <div class="text-5xl font-bold">David Lopez Rodriguez</div>
+          <div class="text-3xl py-3 font-bold">Research fellow - University of Lausanne</div>
+          <div class="py-2">
+            <text class="text-lg">
+              As a multidisciplinary researcher, my focus lies in identifying and prioritizing risk assessments of environmental chemicals. My passion for this field stems from the pressing need to evaluate the impact of chemicals on human health and the environment. With expertise in multiple disciplines, including toxicology, environmental science, and bioinformatics, I strive to develop a comprehensive understanding of the potential risks associated with chemical exposures.
 
-    <div>
-      <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
-    </div>
+              </text
+            >
+          </div>
+          <div class="mt-8">
+      
+          </div>
+        </div>
 
-    <HorizontalCard
-      title="Demo Project 1"
-      img="/post_img.webp"
-      desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      url="#"
-      badge="NEW"
-    />
-    <div class="divider my-0"></div>
-    <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-  />
-    <div class="divider my-0"></div>
-    <HorizontalCard
-    title="Demo Project 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-    badge="FOSS"
-  />
+        <div>
+          <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
+        </div>
 
-
-    <div>
-      <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
-    </div>
-
-    {
-      last_posts.map((post) => (
         <HorizontalCard
-          title={post.data.title}
-          img={post.data.heroImage}
-          desc={post.data.description}
-          url={"/blog/" + post.slug}
-          target="_self"
-          badge={post.data.badge}
+          title="Demo Project 1"
+          img="/post_img.webp"
+          desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+          url="#"
+          badge="NEW"
         />
         <div class="divider my-0"></div>
-      ))
-    }
+        <HorizontalCard
+        title="Demo Project 2"
+        img="/post_img.webp"
+        desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        url="#"
+      />
+        <div class="divider my-0"></div>
+        <HorizontalCard
+        title="Demo Project 3"
+        img="/post_img.webp"
+        desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        url="#"
+        badge="FOSS"
+      />
+
+
+        <div>
+          <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
+        </div>
+
+        {
+          last_posts.map((post) => (
+            <HorizontalCard
+              title={post.data.title}
+              img={post.data.heroImage}
+              desc={post.data.description}
+              url={"/blog/" + post.slug}
+              target="_self"
+              badge={post.data.badge}
+            />
+            <div class="divider my-0"></div>
+          ))
+        }
 
 </BaseLayout>
