--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -33,7 +33,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 <br>
 <div class="text-lg"> Sanchez CR, Ramos C, Díaz F, <u>Lopez D</u>. Attention-Deficit/Hyperactivity Disorder: prevalence of risk in the scholastic scope of the Canary islands. <b>Actas Esp Psiquiatr</b> 42, 169–175 (2014).  https://pubmed.ncbi.nlm.nih.gov/25017494/. </div>
 
-    <div class="text-2xl w-full font-bold mb-0 mt-10">Press releases about our work</div>
+    <div class="text-2xl w-full font-bold mb-0 mt-10">Press releases</div>
   <div class="divider my-0"></div>
 
 <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"> Endocrine society</a>
