--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -12,7 +12,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <div class="text-2xl w-full font-bold mb-0 mt-10">Peer-reviewed scientific articles</div>
   <div class="divider my-0"></div>
  
- <div class="text-lg"> Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
+ <div class="text-lg"> Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. <b>Frontiers in Endocrinology</b>. 2023. April 3; 14. https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full  </div>
 <br>
 <div class="text-lg"><u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F. Ontogeny of ependymoglial cells lining the third ventricle in mice. <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759. https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full  </div>
 <br>
