--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -7,7 +7,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
   
   <div class="divider my-0"></div><p align="justify">
- <text class="text-lg"> <u>Lopez-Rodriguez D</u>. Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation. University of Liège.  </text>
+ <text class="text-lg"> <u>Lopez-Rodriguez D</u>. Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation. GIGA-Neurosciences. University of Liège. Advisor: Prof. Anne-Simone Parent. </text>
  </p>
 
     <div class="text-2xl w-full font-bold mb-0 mt-10">Peer-reviewed scientific articles</div>
