--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -12,24 +12,14 @@
 		</div>
 		<ul class="grow shrink">
 			<!-- Sidebar content here -->
-			<li>
-				<a id="About" href="/">About</a>
-			</li>
-			<li>
-				<a id="Publications" href="/Publications">Publications</a>
-			</li>
-			<li>
-				<a id="CV" href="/CV">CV</a>
-			</li>
-			<li>
-				<a id="Projects" href="/Projects">Projects</a>
-			</li>
-			<li>
-				<a id="Contact" href="/Contact/">Contact</a>
-			</li>
+			<li><a id="About" href="/">About</a></li>
+			<li><a id="Projects" href="/Projects">Projects</a></li>
+			<li><a id="CV" href="/CV">CV</a> </li>
+			<li><a id="Publications" href="/Publications">Publications</a></li>
+			<li><a id="Contact" href="/Contact/">Contact</a></li>
 		</ul>
+		
 		<div class="social-icons px-4 my-2 flex self-center">
-
 			</a>
 			<a href="https://github.com/dalodriguez" target="_blank" class="mx-3" aria-label="Github" title="Github">
 				<svg
