--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -11,15 +11,132 @@ const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout>
+ <div class="py-8"><text class="text-lg"> <p align="justify">   <b> David Lopez Rodriguez  </b> </p> </text> </div>
 
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> David Lopez Rodriguez  </b> </p> </text> </div>
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> Email </b> david.lopezrodriguez@unil.ch </p> </text> </div>
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> Github </b> https://github.com/dalodriguez </p> </text> </div>
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> ResearchGate </b> https://www.researchgate.net/profile/David-Lopez-Rodriguez-3 </p> </text> </div>
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> Linkedin </b> https://www.linkedin.com/in/david-lopez-rodriguez-02634a266/ </p> </text> </div>
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> Lausanne University </b> https://www.unil.ch/dsb/home/menuinst/groupes-de-recherche/fanny-langlet.html </p> </text> </div>
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> ORCID </b> https://orcid.org/0000-0001-5420-447X </p> </text> </div>
- <div class="py-2"><text class="text-lg"> <p align="justify">   <b> Google Scholar </b> https://scholar.google.com/citations?user=o_o5ZVcAAAAJ&hl=fr&oi=ao </p> </text> </div>
+ 
+<div class="social-icons px-6 my-2 py-2 flex">
+		<a href="david.lopezrodriguez@unil.ch" target="_blank" class="mx-3" aria-label="Email" title="Email">
+				<svg
+				  xmlns="http://www.w3.org/2000/svg"
+				  width="24"
+				  height="24"
+				  viewBox="0 0 24 24"
+				  style="fill: currentColor;transform: ;msFilter:;" >
+				<path d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6zm3.519 0L12 11.671 18.481 6H5.52zM20 7.329l-7.341 6.424a1 1 0 0 1-1.318 0L4 7.329V18h16V7.329z" fill="#0D0D0D"/>
+				
+				</svg>
+				<a> <b> Email </b> david.lopezrodriguez@unil.ch </a>
+			</a>
+</div>
+
+<div class="social-icons px-6 my-2 py-2 flex">
+			<a href="https://github.com/dalodriguez" target="_blank" class="mx-3" aria-label="Github" title="Github">
+				<svg
+				  xmlns="http://www.w3.org/2000/svg"
+				  width="24"
+				  height="24"
+				  viewBox="0 0 24 24"
+				  style="fill: currentColor;transform: ;msFilter:;" >
+				<path
+					 fill-rule="evenodd"
+					 clip-rule="evenodd"
+					 d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"
+          ></path>
+				</svg>
+				<a href="https://github.com/dalodriguez"><b> Github </b></a>
+			</a>
+</div>
+
+
+<div class="social-icons px-6 my-2 py-2 flex">
+			<a href="https://www.researchgate.net/profile/David-Lopez-Rodriguez-3" target="_blank" class="mx-3" aria-label="ResearchGate" title="Github">
+				<svg
+				  xmlns="http://www.w3.org/2000/svg"
+				  width="24"
+				  height="24"
+				  viewBox="0 0 24 24"
+				  style="fill: currentColor;transform: ;msFilter:;" >
+				<path
+					 d="M19.586 0c-.818 0-1.508.19-2.073.565-.563.377-.97.936-1.213 1.68a3.193 3.193 0 0 0-.112.437 8.365 8.365 0 0 0-.078.53 9 9 0 0 0-.05.727c-.01.282-.013.621-.013 1.016a31.121 31.123 0 0 0 .014 1.017 9 9 0 0 0 .05.727 7.946 7.946 0 0 0 .077.53h-.005a3.334 3.334 0 0 0 .113.438c.245.743.65 1.303 1.214 1.68.565.376 1.256.564 2.075.564.8 0 1.536-.213 2.105-.603.57-.39.94-.916 1.175-1.65.076-.235.135-.558.177-.93a10.9 10.9 0 0 0 .043-1.207v-.82c0-.095-.047-.142-.14-.142h-3.064c-.094 0-.14.047-.14.141v.956c0 .094.046.14.14.14h1.666c.056 0 .084.03.084.086 0 .36 0 .62-.036.865-.038.244-.1.447-.147.606-.108.385-.348.664-.638.876-.29.212-.738.35-1.227.35-.545 0-.901-.15-1.21-.353-.306-.203-.517-.454-.67-.915a3.136 3.136 0 0 1-.147-.762 17.366 17.367 0 0 1-.034-.656c-.01-.26-.014-.572-.014-.939a26.401 26.403 0 0 1 .014-.938 15.821 15.822 0 0 1 .035-.656 3.19 3.19 0 0 1 .148-.76 1.89 1.89 0 0 1 .742-1.01c.344-.244.593-.352 1.137-.352.508 0 .815.096 1.144.303.33.207.528.492.764.925.047.094.111.118.198.07l1.044-.43c.075-.048.09-.115.042-.199a3.549 3.549 0 0 0-.466-.742 3 3 0 0 0-.679-.607 3.313 3.313 0 0 0-.903-.41A4.068 4.068 0 0 0 19.586 0zM8.217 5.836c-1.69 0-3.036.086-4.297.086-1.146 0-2.291 0-3.007-.029v.831l1.088.2c.744.144 1.174.488 1.174 2.264v11.288c0 1.777-.43 2.12-1.174 2.263l-1.088.2v.832c.773-.029 2.12-.086 3.465-.086 1.29 0 2.951.057 3.667.086v-.831l-1.49-.2c-.773-.115-1.174-.487-1.174-2.264v-4.784c.688.057 1.29.057 2.206.057 1.748 3.123 3.41 5.472 4.355 6.56.86 1.032 2.177 1.691 3.839 1.691.487 0 1.003-.086 1.318-.23v-.744c-1.031 0-2.063-.716-2.808-1.518-1.26-1.376-2.95-3.582-4.355-6.074 2.32-.545 4.04-2.722 4.04-4.9 0-3.208-2.492-4.698-5.758-4.698zm-.515 1.29c2.406 0 3.839 1.26 3.839 3.552 0 2.263-1.547 3.782-4.097 3.782-.974 0-1.404-.03-2.063-.086v-7.19c.66-.059 1.547-.059 2.32-.059z"
+          ></path>
+				</svg>
+				<a href="https://www.researchgate.net/profile/David-Lopez-Rodriguez-3"><b> ResearchGate </b></a>
+			</a>
+</div>
+
+
+<div class="social-icons px-6 my-2 py-2 flex">
+			<a href="https://www.linkedin.com/in/david-lopez-rodriguez-02634a266/" target="_blank" class="mx-3" aria-label="Linkedin" title="Linkedin">
+				<svg
+				  xmlns="http://www.w3.org/2000/svg"
+				  width="24"
+				  height="24"
+				  viewBox="0 0 24 24"
+				  style="fill: currentColor;transform: ;msFilter:;"
+          >
+					<circle cx="4.983" cy="5.009" r="2.188"></circle>
+					<path
+            d="M9.237 8.855v12.139h3.769v-6.003c0-1.584.298-3.118 2.262-3.118 1.937 0 1.961 1.811 1.961 3.218v5.904H21v-6.657c0-3.27-.704-5.783-4.526-5.783-1.835 0-3.065 1.007-3.568 1.96h-.051v-1.66H9.237zm-6.142 0H6.87v12.139H3.095z"
+          ></path>
+				</svg>
+				<a href="https://www.linkedin.com/in/david-lopez-rodriguez-02634a266/"><b> Linkedin </b></a>
+			</a>
+</div>
+
+
+<div class="social-icons px-6 my-2 py-2 flex">
+			<a href="https://www.unil.ch/dsb/home/menuinst/groupes-de-recherche/fanny-langlet.html" target="_blank" class="mx-3" aria-label="Lausanne University" title="Lausanne University">
+				<svg
+				  xmlns="http://www.w3.org/2000/svg"
+				  width="24"
+				  height="24"
+				  viewBox="0 0 24 24"
+				  style="fill: currentColor;transform: ;msFilter:;"
+          >
+					<path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.303v7.444h2.297c3.272 0 4.022-2.484 4.022-3.722 0-2.016-1.284-3.722-4.097-3.722h-2.222z"></path>
+					<circle cx="6" cy="18" r="2"></circle>
+				</svg>
+				<a href="https://www.unil.ch/dsb/home/menuinst/groupes-de-recherche/fanny-langlet.html"><b> Lausanne University </b></a>
+			</a>
+</div>
+
+
+<div class="social-icons px-6 my-2 py-2 flex">
+			<a href="https://orcid.org/0000-0001-5420-447X" target="_blank" class="mx-3" aria-label="ORCID" title="ORCID">
+				<svg
+				  xmlns="http://www.w3.org/2000/svg"
+				  width="24"
+				  height="24"
+				  viewBox="0 0 24 24"
+				  style="fill: currentColor;transform: ;msFilter:;"
+          >
+					<path d="M21,10a.99974.99974,0,0,0,1-1V6a.9989.9989,0,0,0-.68359-.94824l-9-3a1.002,1.002,0,0,0-.63282,0l-9,3A.9989.9989,0,0,0,2,6V9a.99974.99974,0,0,0,1,1H4v7.18427A2.99507,2.99507,0,0,0,2,20v2a.99974.99974,0,0,0,1,1H21a.99974.99974,0,0,0,1-1V20a2.99507,2.99507,0,0,0-2-2.81573V10ZM20,21H4V20a1.001,1.001,0,0,1,1-1H19a1.001,1.001,0,0,1,1,1ZM6,17V10H8v7Zm4,0V10h4v7Zm6,0V10h2v7ZM4,8V6.7207l8-2.667,8,2.667V8Z"></path>
+					<circle cx="6" cy="18" r="2"></circle>
+				</svg>
+				<a href=" https://orcid.org/0000-0001-5420-447X"><b> ORCID </b></a>
+			</a>
+</div>
+
+
+<div class="social-icons px-6 my-2 py-2 flex">
+			<a href="https://scholar.google.com/citations?user=o_o5ZVcAAAAJ&hl=fr&oi=ao" target="_blank" class="mx-3" aria-label=" Google Scholar" title=" Google Scholar">
+				<svg
+				  xmlns="http://www.w3.org/2000/svg"
+				  width="24"
+				  height="24"
+				  viewBox="0 0 24 24"
+				  style="fill: currentColor;transform: ;msFilter:;"
+          >
+					<path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"></path>
+					<circle cx="6" cy="18" r="2"></circle>
+				</svg>
+				<a href="https://scholar.google.com/citations?user=o_o5ZVcAAAAJ&hl=fr&oi=ao"><b>  Google Scholar </b></a>
+			</a>
+</div>
+
+
+<div class="py-20"></div>
+ <div class="py-0"><text class="text-lg"> <p align="justify">    Website created in Github & VisualStudio using <b>Astro </b> </p> </text> </div>
 
 
 
