--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
-<BaseLayout title = "Projects">
+<BaseLayout title = "Publications - David Lopez Rodriguez">
   <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
   
   <div class="divider my-0"></div><p align="justify">
@@ -54,8 +54,8 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 <a class="text-lg" href=" https://inews.co.uk/news/health/why-exposure-to-everyday-chemicals-could-reduce-your-grandchildrens-fertility-272897"> iNews,</a>
 <a class="text-lg" href="https://medicalxpress.com/news/2019-03-endocrine-disruptors-female-reproduction-multiple.html"> MedicalExpress,</a>
 <a class="text-lg" href=" https://notiziescientifiche.it/sostanze-tossiche-immesse-nellambiente-danneggiano-sistema-endocrino-e-fertilita/"> Notizie scientifiche,</a>
-<a class="text-lg" href="https://www.infosalus.com/salud-investigacion/noticia-contaminacion-pueden-perjudicar-fertilidad-generaciones-futuras-20190520075734.html"> Infosalus ,</a>
-<a class="text-lg" href=" https://www.business-standard.com/article/pti-stories/environmental-toxins-may-impair-fertility-of-future-generations-study-119052000276_1.html"> Business Standard ,</a>
+<a class="text-lg" href="https://www.infosalus.com/salud-investigacion/noticia-contaminacion-pueden-perjudicar-fertilidad-generaciones-futuras-20190520075734.html"> Infosalus,</a>
+<a class="text-lg" href=" https://www.business-standard.com/article/pti-stories/environmental-toxins-may-impair-fertility-of-future-generations-study-119052000276_1.html"> Business Standard,</a>
 <a class="text-lg" href=" https://fit.thequint.com/health-news/environmental-pollutants-affect-fertility-in-future-generations-study"> Fit the quint,</a>
 <a class="text-lg" href=" https://www.sciencemediacentre.org/expert-reaction-to-conference-abstract-unpublished-work-on-environmental-toxins-and-fertility-of-future-generations/"> Science Media Center,</a>
 <a class="text-lg" href=" https://afaae.com/africa/how-do-environmental-toxins-affect-sexual-development-and-fertility/"> Afaae,</a>
