--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -13,7 +13,7 @@
 		<ul class="grow shrink">
 			<!-- Sidebar content here -->
 			<li><a id="About" href="/">About</a></li>
-			<li><a id="Projects" href="/Projects">Projects</a></li>
+			<li><a id="projects" href="/projects">Projects</a></li>
 			<li><a id="cv" href="/cv">CV</a> </li>
 			<li><a id="Publications" href="/Publications">Publications</a></li>
 			<li><a id="Contact" href="/Contact/">Contact</a></li>
