--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -11,38 +11,42 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-5 text-justify">
     Experienced and multidisciplinar scientist with a background in toxicology, biology, environmental and computational sciences. 
     Skilled in bioinformatics, computational biology and chemoinformatics with a demonstrated history of working in academia. 
-    Proficient in python, R, version control, among others. Currently, my focus lies in generating machine learning tools to identify and 
-    prioritize the risk assessments of environmental chemicals.
+    Proficient in python, R, version control, among others. 
   </div>
 
   <div class="mb-10">
     <div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
-  <ul class="list-disc md:columns-4 columns-2 mx-6">
-    <li>R</li>
-    <li>Pyhton</li>
-    <li>UNIX</li>
-    <li>High-performance computing (HPC)</li>
-    <li>Machine learning</li>
-    <li>Computational biology</li>
+  <ul class="list-disc md:columns-3 columns-2 mx-6">
+    <li>Toxicology</li>
+   <li>Computational biology</li>
     <li>Molecular biology</li>
-    <li>Bioinformatics</li>
+  <li>Bioinformatics</li>
+  <li>Risk asessment</li>
+    <li>Neuroendocrinology</li>
+   <li>Epigenetics</li>
+    <li>Advanced Statistics</li>
+ <li>Chemo-informatics</li>
+    <li>Physiology</li>
+    <li>R (RStudio)</li>
+    <li>Pyhton (Anaconda, PyCharm)</li>
+    <li>UNIX</li>
+    <li>High-perf. computing (HPC)</li>
+    <li>Machine learning</li>
+    <li>QSAR</li>
+    <li>In silico methods</li>
+    <li>Version control (Git)</li>
+   <li>Adobe Photoshop</li>
+    <li>Web design: astro</li>
+     <li>scRNAseq</li>
+   <li>RNAseq</li>
     <li>qPCR</li>
-    <li>RNAseq & library preparation</li>
-    <li>scRNAseq</li>
-    <li>Epigenetics</li>
     <li>FACS</li>
     <li>ChipSEQ</li>
     <li>Cut&Run</li>
-    <li>Advanced Statistics</li>
-    <li>Chemo-informatics</li>
-    <li>Version control (Git)</li>
-    <li>Epigenetics</li>
-    <li>Toxicology</li>
-    <li>Risk asessment</li>
-    <li>Neuroendocrinology</li>
-    <li>Adobe Photoshop</li>
-    <li>Web design: astro</li>
-    <li>Physiology</li>
+   <li>IHC</li>
+   <li>WB</li>
+   <li>Microscopy</li>
+   <li>ELISA</li>
   </ul>
     </div>
 
@@ -146,15 +150,16 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
    <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Reviewing activity</div>
+    <div class="text-3xl w-full font-bold">Peer-reviewingy</div>
   </div>
   <ul class="list-disc mx-6 mb-10 grid gap-2">
+   <li>
+      <a href="https://www.karger.com/journal/home/223855" target="_blank">Reviewer for Neuroendocrinology</a>
+    </li>
     <li>
       <a href="https://www.frontiersin.org/journals/psychiatry" target="_blank">Reviewer for Frontiers in Psychiatry</a>
     </li>
-    <li>
-      <a href="https://www.karger.com/journal/home/223855" target="_blank">Reviewer for Neuroendocrinology</a>
-    </li>
+   
   </ul>
 
 
