--- a/src/pages/p1.astro
+++ b/src/pages/p1.astro
@@ -6,7 +6,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 
-<BaseLayout title = "Projects">
+<BaseLayout title = "p1">
 
 <div>
           <div class="text-3xl w-full font-bold mb-2">A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs) </div>
