--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -35,27 +35,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 <div>
           <div class="text-3xl w-full font-bold mb-2">Past projects </div>
         </div>
-
-        <HorizontalCard
-          title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
-          img="/EDCs.webp"
-          desc="Keywords: Endocrine Disruption, Toxicology, In Silico, QSAR, Machine Learning, NAMs, Risk Assessment, Chemo-informatics, Environmental Science, Adverse outcome pathways (AOPs)"
-          url="#"
-        />
-        <div class="divider my-0"></div>
-        <HorizontalCard
-        title="Sex dimorphism and temporal dynamics of the tanycyte connectome according to changes in metabolic state"
-        img="/Tanycytes.webp"
-        desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
-        url="#"
-      />
-        <div class="divider my-0"></div>
-        <HorizontalCard
-        title="Single-cell heterogeneity and plasticity of 3V ependyma during energy imbalance"
-        img="/Tanycytes2.webp"
-        desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
-        url="#"
-      />
+        	<li><a id="p1" href="/p1/">BLABLI</a></li>
+   
+  ...Ongoing...
 
 </div>
 
